@@ -22,6 +22,7 @@ to be included, please mail to sphinx-dev@googlegroups.com.
 * Zope 3: e.g. http://docs.carduner.net/z3c-tutorial/
 * Glashammer: http://glashammer.welterde.de/
 * SymPy: http://docs.sympy.org/
+* GeoDjango: http://geodjango.org/docs/
 * Grok (upcoming)
 * Django (upcoming)
 * Matplotlib (upcoming)
